2018-05-15  Dirk Schulze  <krit@webkit.org>

        Add new SVGDOM SVGFEBLEND constants
        https://bugs.webkit.org/show_bug.cgi?id=185581

        Reviewed by Simon Fraser.

        Provide new SVG DOM constants for the new blend modes added to feBlend.

        https://drafts.fxtf.org/filter-effects-1/#InterfaceSVGFEBlendElement

        * svg/custom/js-svg-constructors-expected.txt:
        * svg/custom/js-svg-constructors.svg:
        * svg/dom/SVGAnimatedEnumeration-SVGFEBlendElement-expected.txt:
        * svg/dom/SVGAnimatedEnumeration-SVGFEBlendElement.html:
        * svg/dom/SVGAnimatedEnumeration-case-sensitive-expected.txt:
        * svg/dom/SVGAnimatedEnumeration-case-sensitive.html:

2018-05-15  Antoine Quint  <graouts@apple.com>

        [Web Animations] Expose Web Animations CSS integration as an experimental feature
        https://bugs.webkit.org/show_bug.cgi?id=185647

        Reviewed by Dean Jackson.

        Change the name of the Web Animations CSS integration flag so that tests can opt into this feature.

        * animations/3d/matrix-transform-type-animation.html:
        * animations/3d/replace-filling-transform.html:
        * animations/3d/transform-origin-vs-functions.html:
        * animations/3d/transform-perspective.html:
        * animations/additive-transform-animations.html:
        * animations/animation-border-overflow.html:
        * animations/animation-callback-timestamp.html:
        * animations/animation-controller-drt-api.html:
        * animations/animation-direction-reverse-fill-mode-hardware.html:
        * animations/animation-direction-reverse-hardware-opacity.html:
        * animations/animation-direction-reverse-hardware.html:
        * animations/animation-direction-reverse-non-hardware.html:
        * animations/animation-direction-reverse-timing-functions-hardware.html:
        * animations/animation-direction-reverse-timing-functions.html:
        * animations/animation-direction.html: