@@ -1,0 +1,7 @@
+<!DOCTYPE html>
+<html>
+<body>
+    <div style="-webkit-text-fill-color: green">Green</div>
+    <div style="-webkit-text-fill-color: green">Green</div>
+</body>
+<html>
