@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
+    <div style="color: green">
+        <div id="undefined-parent" style="color: red; -webkit-text-fill-color: inherit">Green</div>
+    </div>
+    <div style="color: purple; -webkit-text-fill-color: green">
+        <div id="defined-parent" style="color: red; -webkit-text-fill-color: inherit">Green</div>
+    </div>
+</body>
+<html>
