@@ -1,3 +1,13 @@
+2018-05-15  Aditya Keerthi  <akeerthi@apple.com>
+
+        Add test to verify behavior of -webkit-text-fill-color when inherited.
+        https://bugs.webkit.org/show_bug.cgi?id=185427
+
+        Reviewed by Daniel Bates.
+
+        * fast/css/webkit-text-fill-color-inherit-expected.html: Added.
+        * fast/css/webkit-text-fill-color-inherit.html: Added.
+
 2018-05-15  Dirk Schulze  <krit@webkit.org>
 
         Add new SVGDOM SVGFEBLEND constants
